// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeago now should render custom string 1`] = `
<time
  dateTime="9/17/2018, 12:58:43"
  title="9/17/2018, 12:58:43"
>
  customMessage
</time>
`;

exports[`Timeago now should render custom string 2`] = `
<time
  dateTime="9/17/2018, 12:58:43"
  title="9/17/2018, 12:58:43"
>
  customMessage
</time>
`;

exports[`Timeago now should render default string 1`] = `
<time
  dateTime="9/17/2018, 12:58:43"
  title="9/17/2018, 12:58:43"
>
  now
</time>
`;

exports[`Timeago now should render default string 2`] = `
<time
  dateTime="9/17/2018, 12:58:43"
  title="9/17/2018, 12:58:43"
>
  now
</time>
`;
